Bug 509696 - Empty role on body removes read-only state; breaks virtual buffers. r=MarcoZ,surkov